Build
------------------------------------------------------------------------------------------------------------------------

Features

Improvements
 - Install bundles dialog now shows bundles sorted alphabetically

Bugfixes
 - HTTP delivery of files containing spaces


Build 2010111001
------------------------------------------------------------------------------------------------------------------------

Features
 - Bundle Installer can download bundles using HTTP

Improvements
 - Big performance improvement on launching commands by avoiding login shell by caching environment
 - Command bundles now support all output and input methods supported in TextMate

Bugfixes
 - Select Current Scope didn't work with cross line scopes
 - Invoking close tab when all tabs were closed


Build 2010110901
------------------------------------------------------------------------------------------------------------------------

Features
 - Proxy configuration
 - Project specific configurations - overwrite mode and tab size
 - Filtering files to show in project
 - Logging

Improvements
 - jsourcepad.sh now supports sending arguments (linux)
 - Goto line dialog. Previously entered text is pre-selected
 - New windows are shown in location selected by platform and thus not in the exact same spot as the previous window
 - Loading huge projects are significantly faster
 - 25% performance improvement in loading large files
 - Temporary restriction - not possible to open files larger than 2mb

Bugfixes
 - Shift left / right shifted the current line plus the next
 - Fullscreen restore issue with Substance lnf
 - Potential fix for firewall issue (windows)
 - Fixed problem with new file from template on Cygwin (windows)
 - Install bundles don't reload bundles
 - Removed memory leak when closing files


